--- a/index.html
+++ b/index.html
@@ -34,20 +34,34 @@
         background-color: #F7F7F7;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
+  </head>
   <body>
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    <script type="module">
+      const loadApp = async () => {
+        const root = document.getElementById('root');
+
+        // When opened directly from the file system, load the prebuilt bundle.
+        if (window.location.protocol === 'file:') {
+          return import('./bundle.js');
+        }
+
+        try {
+          // Vite dev server will handle the TSX entrypoint.
+          await import('./index.tsx');
+        } catch (err) {
+          console.warn('TSX entry failed, falling back to prebuilt bundle.', err);
+          return import('./bundle.js');
+        }
+      };
+
+      loadApp().catch((err) => {
+        console.error('Failed to start the app.', err);
+        const el = document.getElementById('root');
+        if (el) {
+          el.innerHTML = '<div style="padding:16px;color:#b91c1c;font-weight:600;">App failed to load. Check the console for details.</div>';
+        }
+      });
+    </script>
+  </body>
 </html>
