feat: update font family and add logo SVG
- Changed the default font family to include "FSAlbertW05-Bold" in index.html
- Updated the font family in the body style to reflect the new font hierarchy
- Modified the build command in package.json to handle SVG files as data URLs
- Added a new logo.svg file containing the logo graphic

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               }
             },
             fontFamily: {
-              sans: ['"Open Sans"', 'Arial', 'sans-serif'],
+              sans: ['"FSAlbertW05-Bold"', '"Open Sans"', 'Helvetica', 'Arial', 'sans-serif'],
             }
           }
         }
@@ -30,7 +30,7 @@
     </script>
     <style>
       body {
-        font-family: 'Open Sans', sans-serif;
+        font-family: "FSAlbertW05-Bold", "Open Sans", Helvetica, Arial, sans-serif;
         background-color: #F7F7F7;
       }
     </style>
